--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,6 @@ share/python-wheels/
 MANIFEST
 
 # PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
 
@@ -59,29 +57,36 @@ coverage.xml
 instance/
 .webassets-cache
 
-# Scrapy stuff:
-.scrapy
-
 # Sphinx documentation
 docs/_build/
 
 # PyBuilder
 target/
 
-# IPython Notebook
+# Jupyter Notebook checkpoints
 *.ipynb_checkpoints
 
-# pyenv
-.python-version
-
-# mypy
-.mypy_cache/
-
-# Visual Studio Code
+# VS Code files
 .vscode/
 
-# JetBrains
+# JetBrains IDEs
 .idea/
 
-# macOS
+# macOS system files
 .DS_Store
+
+# Windows system files
+Thumbs.db
+desktop.ini
+
+# Local environment files
+.env
+.venv/
+venv/
+env/
+env.bak/
+venv.bak/
+
+# Test blockchain files
+test_blockchain.json  # For persistence test file created during test runs
+blockchain.json       # Main blockchain data file, if not needed in version control
