--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-# Only if needed
-requests>=2.25.1
+Flask>=2.0.0
+cryptography>=3.4.7
 python-dotenv>=0.15.0
+requests>=2.25.1  # Optional, if needed for future peer communication
